<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.gestao.reise.motorista.Completar_perfil_infor_carro">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:src="@drawable/com_facebook_profile_picture_blank_square"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.0" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="368dp"
        android:layout_height="59dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/textInputLayout"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="9dp">

        <EditText
            android:id="@+id/ed_modelo"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:hint="@string/veiculo_modelo" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="368dp"
        android:layout_height="59dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/textInputLayout2"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="0dp">

        <EditText
            android:id="@+id/ed_placa"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:hint="@string/veiculo_placa" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="368dp"
        android:layout_height="59dp"
        android:id="@+id/textInputLayout3"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="0dp">

        <EditText
            android:id="@+id/ed_qte_vagas"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:hint="@string/qte_vagas"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    </android.support.design.widget.TextInputLayout>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="368dp"
        android:layout_height="35dp"
        android:text="@string/vaga_crianca"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

</android.support.constraint.ConstraintLayout>
